[gd_scene load_steps=5 format=3 uid="uid://b1w7exipc2uam"]

[ext_resource type="Texture2D" uid="uid://b8j8g88ty4wux" path="res://assets/bg_night.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://jcp686pg3jy4" path="res://main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://dncav7sjjwmd0" path="res://bird.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://djy4gy2y8gget" path="res://PipePair.tscn" id="4_lquwl"]

[node name="Main" type="Node2D"]
process_mode = 1
script = ExtResource("1_1bvp3")

[node name="Background" type="Sprite2D" parent="."]
process_mode = 1
position = Vector2(240.5, 400.5)
scale = Vector2(1.33056, 1.24844)
texture = ExtResource("1_0xm2m")

[node name="Bird" parent="." instance=ExtResource("2_h2yge")]
process_mode = 1
position = Vector2(100, 400)

[node name="PipePair" parent="." instance=ExtResource("4_lquwl")]
process_mode = 1
position = Vector2(-31, 0)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOverScreen" type="Control" parent="UI"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Game Over" type="Label" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -25.0
offset_right = 44.775
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.976471, 0, 1)
theme_override_colors/font_shadow_color = Color(0.960784, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0.960784, 0.964706, 0, 1)
text = "Game Over"

[node name="Restart" type="Button" parent="UI/GameOverScreen"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = 30.0
offset_right = 32.5
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[connection signal="pressed" from="UI/GameOverScreen/Restart" to="." method="_on_restart_pressed"]

[editable path="PipePair"]
